MGRAPPS-82 - fix sonar